<resources>
    <string name="app_name">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="story_description">Story Description</string>
    <string name="login_failed">Failed to Login</string>
    <string name="no_data_available">Error data account</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Log Out</string>
    <string name="photo">Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="description">Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="gunakan_lokasi_saat_ini">Gunakan lokasi saat ini</string>
    <string name="lokasi_tidak_ada">Lokasi: Tidak ada</string>
</resources>