<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_photo_gallery"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/from_gallery" />

        <Button
            android:id="@+id/btn_select_photo_camera"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_camera" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Description"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Switch
        android:id="@+id/switch_use_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gunakan_lokasi_saat_ini"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_location_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_tidak_ada"
        android:visibility="gone" />


    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_story" />
</LinearLayout>
