<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.RegisterFragment">

    <com.example.storyapp.presentation.auth.custom.ValidationEditText
        android:id="@+id/ed_register_name"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints="Full Name"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/ic_name"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:transitionName="nameTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:validationType="NAME" />

    <com.example.storyapp.presentation.auth.custom.ValidationEditText
        android:id="@+id/ed_register_email"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Email"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/ic_menu_mail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:transitionName="emailTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:validationType="EMAIL" />

    <com.example.storyapp.presentation.auth.custom.ValidationEditText
        android:id="@+id/ed_register_password"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Password"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/ic_menu_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:transitionName="passwordTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:validationType="PASSWORD" />

    <com.example.storyapp.presentation.auth.custom.ValidationButton
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:transitionName="ButtonTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
